opam-version: "1.2"
name: "mirage-block-ramdisk"
maintainer: "dave@recoil.org"
authors: [ "David Scott" ]
license: "ISC"
homepage: "https://github.com/mirage/mirage-block-ramdisk"
dev-repo: "https://github.com/mirage/mirage-block-ramdisk.git"
bug-reports: "https://github.com/mirage/mirage-block-ramdisk/issues"
doc: "https://mirage.github.io/mirage-block-ramdisk/"

tags: ["org:mirage"]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
  "ocamlfind"  {build}
  "ocamlbuild" {build}
  "topkg"      {build}
  "alcotest"   {test}
  "cstruct"
  "io-page"
  "io-page-unix" {test}
  "mirage-block-lwt" {>= "1.0.0"}
  "lwt"
]
available: [ocaml-version >= "4.04.2"]
